# Rust-Axum-SeaORM-Mvc

./: .env.sample  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240526_063346_create_user_table.rs
src/: main.rs
src/controllers/: users_controller.rs
src/helpers/: api_error.rs
src/middleware/: auth.rs
src/models/: users_model.rs
src/routers/: user_router.rs
src/server/: mod.rs  postgres_server.rs
